adding a bunch of gear

--- a/css/main.css
+++ b/css/main.css
@@ -1,148 +1,1 @@
-/*
-==============================================================================================
-UTILITY STYLES :: BASE.SCSS
-==============================================================================================
-*/
-#main.index {
-  *zoom: 1; }
-  #main.index:before, #main.index:after {
-    content: " ";
-    display: table; }
-  #main.index:after {
-    clear: both; }
-
-.price {
-  position: relative; }
-  .price:before {
-    content: '$';
-    position: relative;
-    left: 0; }
-
-.USD .price:before {
-  content: '$'; }
-
-.EUR .price:before {
-  content: '\20AC'; }
-
-.ILS .price:before {
-  content: '\20AA'; }
-
-.GBP .price:before {
-  content: '\00A3'; }
-
-/*
-==============================================================================================
-UTILITY STYLES :: BASE.SCSS
-==============================================================================================
-*/
-.vertical-center {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%); }
-
-.cover.background-image {
-  background-position: center center;
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-
-a:hover, a:focus {
-  text-decoration: none; }
-
-/* Animations */
-a,
-button,
-.js-match-viewport-height {
-  -webkit-transition: all 240ms ease-in-out;
-  -moz-transition: all 240ms ease-in-out;
-  -ms-transition: all 240ms ease-in-out;
-  -o-transition: all 240ms ease-in-out;
-  transition: all 240ms ease-in-out;
-  -webkit-backface-visibility: hidden; }
-
-/* Buttons */
-button {
-  padding: 12px 20px;
-  display: inline-block;
-  width: auto;
-  text-align: center;
-  border: none;
-  outline: none; }
-
-/* Embedded Media */
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-  height: auto; }
-
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
-
-.embed-container .soundHeader__title {
-  display: none; }
-
-.display-none {
-  display: none !important; }
-
-.mobile-only {
-  display: inline-block !important; }
-
-.smartphone-only {
-  display: inline-block !important; }
-
-.tablet-only {
-  display: none !important; }
-
-.desktop-only {
-  display: none !important; }
-
-/* min 500px */
-@media only screen and (min-width: 768px) {
-  .smartphone-only {
-    display: none !important; }
-
-  .tablet-only {
-    display: inline-block !important; } }
-/* min 768px */
-@media only screen and (min-width: 992px) {
-  .mobile-only,
-  .tablet-only {
-    display: none !important; }
-
-  .desktop-only {
-    display: inline-block !important; } }
-/* min 992px */
-/* min 1200px */
-/*
-==============================================================================================
-MASTER TYPROGRAPHY
-==============================================================================================
-*/
-body {
-  font-size: 12px; }
-
-/*
-==============================================================================================
-MASTER LAYOUT :: INDEX :: #MAIN
-==============================================================================================
-*/
-#main.index {
-  opacity: 0.8;
-  filter: alpha(opacity=80); }
-  #main.index p {
-    color: red; }
+*{margin:0px;padding:0px}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden],template{display:none}img{border:0;outline:none;max-width:100%}svg:not(:root){overflow:hidden}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0}button,input{line-height:normal}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}.vertical-center{position:relative;top:50%;-webkit-transform:translateY(-50%);-moz-transform:translateY(-50%);-ms-transform:translateY(-50%);-o-transform:translateY(-50%);transform:translateY(-50%)}.cover.background-image{background-position:center center;background-repeat:no-repeat;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}a:hover,a:focus{text-decoration:none}a,button,.js-match-viewport-height{-webkit-transition:all 240ms ease-in-out;-moz-transition:all 240ms ease-in-out;-ms-transition:all 240ms ease-in-out;-o-transition:all 240ms ease-in-out;transition:all 240ms ease-in-out;-webkit-backface-visibility:hidden}button{padding:12px 20px;display:inline-block;width:auto;text-align:center;border:none;outline:none}.embed-container{position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;height:auto}.embed-container iframe,.embed-container object,.embed-container embed{position:absolute;top:0;left:0;width:100%;height:100%}.embed-container .soundHeader__title{display:none}.display-none{display:none !important}.mobile-only{display:inline-block !important}.smartphone-only{display:inline-block !important}.tablet-only{display:none !important}.desktop-only{display:none !important}@media only screen and (min-width: 768px){.smartphone-only{display:none !important}.tablet-only{display:inline-block !important}}@media only screen and (min-width: 992px){.mobile-only,.tablet-only{display:none !important}.desktop-only{display:inline-block !important}}body{font-family:'Open Sans', sans-serif;font-weight:400}p,li{font-size:16px;line-height:160%;font-weight:100;color:#000}p,ul{margin:0px 0px 15px 0px}p:last-child,ul>li:last-child{margin:0px}ul,li{list-style:none;font-size:.1px}h1,h2,h3,h4,h5,h6{font-family:'Roboto Slab', serif;margin:0px;padding:0px}a:hover,a:active{text-decoration:none;outline:none}@media only screen and (min-width: 768px){p,li{font-size:18px}p,ul{margin:0px 0px 18px 0px}}@media only screen and (min-width: 992px){p,li{font-size:15px}p,ul{margin:0px 0px 15px 0px}}@media only screen and (min-width: 1200px){p,li{font-size:19px}p,ul{margin:0px 0px 19px 0px}}#site-container,nav.push-menu{-webkit-transition:all 320ms ease-in-out 50ms;-moz-transition:all 320ms ease-in-out 50ms;-ms-transition:all 320ms ease-in-out 50ms;-o-transition:all 320ms ease-in-out 50ms;transition:all 320ms ease-in-out 50ms;-webkit-backface-visibility:hidden}nav.push-menu{display:block;width:220px;height:100%;position:fixed;top:0px;background:#000;color:#fff;padding:12px}#push-menu-right{right:0px;text-align:right;border-left:10px grey solid;-webkit-transform:translate3d(220px, 0, 0);-moz-transform:translate3d(220px, 0, 0);-ms-transform:translate3d(220px, 0, 0);-o-transform:translate3d(220px, 0, 0);transform:translate3d(220px, 0, 0)}#site-container.pushed-left{-webkit-transform:translate3d(-220px, 0, 0);-moz-transform:translate3d(-220px, 0, 0);-ms-transform:translate3d(-220px, 0, 0);-o-transform:translate3d(-220px, 0, 0);transform:translate3d(-220px, 0, 0)}#push-menu-right.pushed-left{-webkit-transform:translate3d(0, 0, 0);-moz-transform:translate3d(0, 0, 0);-ms-transform:translate3d(0, 0, 0);-o-transform:translate3d(0, 0, 0);transform:translate3d(0, 0, 0)}#push-menu-left{left:0px;text-align:left;border-right:10px grey solid;-webkit-transform:translate3d(-220px, 0, 0);-moz-transform:translate3d(-220px, 0, 0);-ms-transform:translate3d(-220px, 0, 0);-o-transform:translate3d(-220px, 0, 0);transform:translate3d(-220px, 0, 0)}#site-container.pushed-right{-webkit-transform:translate3d(220px, 0, 0);-moz-transform:translate3d(220px, 0, 0);-ms-transform:translate3d(220px, 0, 0);-o-transform:translate3d(220px, 0, 0);transform:translate3d(220px, 0, 0)}#push-menu-left.pushed-right{-webkit-transform:translate3d(0px, 0, 0);-moz-transform:translate3d(0px, 0, 0);-ms-transform:translate3d(0px, 0, 0);-o-transform:translate3d(0px, 0, 0);transform:translate3d(0px, 0, 0)}@media only screen and (min-width: 500px){nav.push-menu{width:240px;padding:14px}#push-menu-right{-webkit-transform:translate3d(240px, 0, 0);-moz-transform:translate3d(240px, 0, 0);-ms-transform:translate3d(240px, 0, 0);-o-transform:translate3d(240px, 0, 0);transform:translate3d(240px, 0, 0)}#site-container.pushed-left{-webkit-transform:translate3d(-240px, 0, 0);-moz-transform:translate3d(-240px, 0, 0);-ms-transform:translate3d(-240px, 0, 0);-o-transform:translate3d(-240px, 0, 0);transform:translate3d(-240px, 0, 0)}#push-menu-left{-webkit-transform:translate3d(-240px, 0, 0);-moz-transform:translate3d(-240px, 0, 0);-ms-transform:translate3d(-240px, 0, 0);-o-transform:translate3d(-240px, 0, 0);transform:translate3d(-240px, 0, 0)}#site-container.pushed-right{-webkit-transform:translate3d(240px, 0, 0);-moz-transform:translate3d(240px, 0, 0);-ms-transform:translate3d(240px, 0, 0);-o-transform:translate3d(240px, 0, 0);transform:translate3d(240px, 0, 0)}}@media only screen and (min-width: 768px){nav.push-menu{width:280px;padding:15px}#push-menu-right{-webkit-transform:translate3d(280px, 0, 0);-moz-transform:translate3d(280px, 0, 0);-ms-transform:translate3d(280px, 0, 0);-o-transform:translate3d(280px, 0, 0);transform:translate3d(280px, 0, 0)}#site-container.pushed-left{-webkit-transform:translate3d(-280px, 0, 0);-moz-transform:translate3d(-280px, 0, 0);-ms-transform:translate3d(-280px, 0, 0);-o-transform:translate3d(-280px, 0, 0);transform:translate3d(-280px, 0, 0)}#push-menu-left{-webkit-transform:translate3d(-280px, 0, 0);-moz-transform:translate3d(-280px, 0, 0);-ms-transform:translate3d(-280px, 0, 0);-o-transform:translate3d(-280px, 0, 0);transform:translate3d(-280px, 0, 0)}#site-container.pushed-right{-webkit-transform:translate3d(280px, 0, 0);-moz-transform:translate3d(280px, 0, 0);-ms-transform:translate3d(280px, 0, 0);-o-transform:translate3d(280px, 0, 0);transform:translate3d(280px, 0, 0)}}@media only screen and (min-width: 992px){nav.push-menu{width:300px;padding:18px}#push-menu-right{-webkit-transform:translate3d(300px, 0, 0);-moz-transform:translate3d(300px, 0, 0);-ms-transform:translate3d(300px, 0, 0);-o-transform:translate3d(300px, 0, 0);transform:translate3d(300px, 0, 0)}#site-container.pushed-left{-webkit-transform:translate3d(-300px, 0, 0);-moz-transform:translate3d(-300px, 0, 0);-ms-transform:translate3d(-300px, 0, 0);-o-transform:translate3d(-300px, 0, 0);transform:translate3d(-300px, 0, 0)}#push-menu-left{-webkit-transform:translate3d(-300px, 0, 0);-moz-transform:translate3d(-300px, 0, 0);-ms-transform:translate3d(-300px, 0, 0);-o-transform:translate3d(-300px, 0, 0);transform:translate3d(-300px, 0, 0)}#site-container.pushed-right{-webkit-transform:translate3d(300px, 0, 0);-moz-transform:translate3d(300px, 0, 0);-ms-transform:translate3d(300px, 0, 0);-o-transform:translate3d(300px, 0, 0);transform:translate3d(300px, 0, 0)}}@media only screen and (min-width: 1200px){nav.push-menu{width:320px;padding:20px}#push-menu-right{-webkit-transform:translate3d(320px, 0, 0);-moz-transform:translate3d(320px, 0, 0);-ms-transform:translate3d(320px, 0, 0);-o-transform:translate3d(320px, 0, 0);transform:translate3d(320px, 0, 0)}#site-container.pushed-left{-webkit-transform:translate3d(-320px, 0, 0);-moz-transform:translate3d(-320px, 0, 0);-ms-transform:translate3d(-320px, 0, 0);-o-transform:translate3d(-320px, 0, 0);transform:translate3d(-320px, 0, 0)}#push-menu-left{-webkit-transform:translate3d(-320px, 0, 0);-moz-transform:translate3d(-320px, 0, 0);-ms-transform:translate3d(-320px, 0, 0);-o-transform:translate3d(-320px, 0, 0);transform:translate3d(-320px, 0, 0)}#site-container.pushed-right{-webkit-transform:translate3d(320px, 0, 0);-moz-transform:translate3d(320px, 0, 0);-ms-transform:translate3d(320px, 0, 0);-o-transform:translate3d(320px, 0, 0);transform:translate3d(320px, 0, 0)}}
