--- a/scss/utility.scss
+++ b/scss/utility.scss
@@ -1,42 +1,6 @@
 /*
 ==============================================================================================
-UTILITY STYLES :: BASE.SCSS
-==============================================================================================
-*/
-
-@mixin opacity($opacity) {
-  opacity: $opacity;
-  $opacity-ie: $opacity * 100;
-  filter: alpha(opacity=$opacity-ie); //IE8
-}
-
-%clearfix {
-  *zoom: 1;
-  &:before, &:after {
-    content: " ";
-    display: table;
-  }
-  &:after {
-    clear: both;
-  }
-}
-
-%currency {
-  position: relative;
-  &:before {
-    content: '$';
-    position: relative;
-    left: 0;
-  }
-}
-.USD %currency:before { content: '$'; }
-.EUR %currency:before { content: '\20AC'; } // must escape the html entities for each currency symbol
-.ILS %currency:before { content: '\20AA'; }
-.GBP %currency:before { content: '\00A3'; }
-
-/*
-==============================================================================================
-UTILITY STYLES :: BASE.SCSS
+MASTER LAYOUT STYLES :: UTILITY :: [ UTILITY.SCSS ]
 ==============================================================================================
 */
 
